# formulaEmbedded

./: .gitignore  CarData.ctl  CarSim.aliases  CarSim.lvproj  Dockerfile  README.md  README.org  SimReader.vi  SimWriter.vi  UNIX_Time_lv82.vi  UdpReader.vi  UdpWriter.vi  createImage.sh  docker-compose.yml  package-lock.json  runContainer.sh
catkin_ws/: Ivensense MPU9250.ini  RTIMULib.ini  compile.sh  dataAcquisition.db  package.json  steering_input.db  wheel_velocity.db
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/beginner_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_ws/devel/include/fsae_electric_vehicle/: Num.h  accelerometer.h  analog_sensor.h  can_message.h  compass.h  gps.h  gravitational_forces.h  gyroscope.h  imu_data.h  pedals.h  steering_input.h  steering_wheel.h  suspension.h  suspension_offset.h  temp_and_pressure.h  tire_pressure.h  vehicle_speed.h  wheel_velocity.h
catkin_ws/devel/lib/: libRTIMULib.so.8  libRTIMULib.so.8.0.0
catkin_ws/devel/lib/beginner_tutorials/: listener  talker
catkin_ws/devel/lib/fsae_electric_vehicle/: ANALOG_DIGITAL_CONVERTER_0x49  BAROMETRIC_PRESSURE_SENSOR  CAN_BUS  I2C_IMU  INERTIAL_MEASUREMENT_UNIT  SPEEDOMETER  VISHAY_POTENTIOMETER_PE30_LONG  dataAcquisitionSqlite  database_interface  dummyReader  filtered_signals_talker  listener  mcu_settings_talker  sinWave  talker  temp_and_pressure  traction_control_talker
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  fsae_electric_vehicle.pc
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/fsae_electric_vehicle/cmake/: fsae_electric_vehicle-msg-extras.cmake  fsae_electric_vehicle-msg-paths.cmake  fsae_electric_vehicleConfig.cmake
catkin_ws/devel/share/gennodejs/ros/actionlib_msgs/: _index.js
catkin_ws/devel/share/gennodejs/ros/nav_msgs/: _index.js
catkin_ws/devel/share/gennodejs/ros/nodelet/: _index.js
catkin_ws/devel/share/roseus/ros/beginner_tutorials/: manifest.l
catkin_ws/devel/share/roseus/ros/fsae_electric_vehicle/: manifest.l
catkin_ws/sqlite/: gravitational_forces.db  tire_pressure.db  wheel_velocity.db
catkin_ws/src/fsae_electric_vehicle/: .#CMakeLists.txt  CMakeLists.txt  CMakeLists.txt.save  package-lock.json  package.json  package.xml
catkin_ws/src/fsae_electric_vehicle/include/: ADS7828.h  ADS7828.hpp  Analog_Sensor.h  Analog_Sensor.hpp  wheel_sensor.h
catkin_ws/src/fsae_electric_vehicle/include/sigpack/: sigpack.h
catkin_ws/src/fsae_electric_vehicle/include/sigpack/base/: base.h
catkin_ws/src/fsae_electric_vehicle/include/sigpack/filter/: filter.h
catkin_ws/src/fsae_electric_vehicle/include/sigpack/gplot/: gplot.h
catkin_ws/src/fsae_electric_vehicle/include/sigpack/image/: image.h
catkin_ws/src/fsae_electric_vehicle/include/sigpack/resampling/: resampling.h
catkin_ws/src/fsae_electric_vehicle/include/sigpack/spectrum/: spectrum.h
catkin_ws/src/fsae_electric_vehicle/msg/: accelerometer.msg  analog_sensor.msg  can_message.msg  gps.msg  imu_data.msg  steering_input.msg  steering_wheel.msg  suspension.msg  suspension_offset.msg  temp_and_pressure.msg  tire_pressure.msg  wheel_velocity.msg
catkin_ws/src/fsae_electric_vehicle/src/: ADS7828.cpp  Analog_Sensor.cpp  GPS.py  I2C_IMU.cpp  INERTIAL_MEASUREMENT_UNIT.cpp  VISHAY_POTENTIOMETER_PE30_LONG.cpp  WEB_TRANSMIT.js  database_interface.cpp  dummyReader.cpp  listener.js  main.launch  sinWave.cpp  talker.js  temp_and_pressure.cpp
catkin_ws/src/fsae_electric_vehicle/src/cpp/: 2  ANALOG_DIGITAL_CONVERTER_0x49.cpp  CAN_BUS.cpp  INERTIAL_MEASUREMENT_UNIT.cpp  SPEEDOMETER.cpp
catkin_ws/src/fsae_electric_vehicle/src/cpp/custom_classes/: .#ADS7828.cpp  ADS7828.cpp  Analog_Sensor.cpp
catkin_ws/src/fsae_electric_vehicle/src/cpp/debugging_nodes/: sinWave.cpp
catkin_ws/src/fsae_electric_vehicle/src/filtered_signals/: filtered_signals_talker.cpp  signals_listener.js
catkin_ws/src/fsae_electric_vehicle/src/launch/: main.launch
catkin_ws/src/fsae_electric_vehicle/src/mcu_settings/: mcu_listener.js  mcu_settings_talker.cpp
catkin_ws/src/fsae_electric_vehicle/src/nodejs/: broadcast.js  client.js  endpoint.js  localServer.js  package-lock.json  package.json  relay.js  rosPublish.js  rosSubscribe.js  server.js
catkin_ws/src/fsae_electric_vehicle/src/nodejs/config/: config.json
catkin_ws/src/fsae_electric_vehicle/src/nodejs/migrations/: 20190319221637-create-log.js
catkin_ws/src/fsae_electric_vehicle/src/nodejs/models/: log.js
catkin_ws/src/fsae_electric_vehicle/src/socket/: client.js  endpoint.js  package-lock.json  package.json  server.js  test.js
catkin_ws/src/fsae_electric_vehicle/src/traction_control/: tc_listener.js  traction_control_talker.cpp
src/: CMakeLists.txt
src/fsae_electric_vehicle/: CMakeLists.txt  package.xml
src/fsae_electric_vehicle/msg/: brake_pressure.msg  drive_train.msg  gps.msg  serial.msg  speedometer.msg  steering.msg  suspension.m  suspension.msg
src/fsae_electric_vehicle/src/cpp/Coolant_temp/: CANController.cpp  main.cpp
src/fsae_electric_vehicle/src/cpp/Coolent_temp/: main.cpp
src/fsae_electric_vehicle/src/cpp/brakes/: CANController.h  brake_pressure.cpp
src/fsae_electric_vehicle/src/cpp/controls(brake_pressure)/: brake_pressure.cpp
src/fsae_electric_vehicle/src/cpp/dataStruct/: main.cpp
src/fsae_electric_vehicle/src/cpp/drive train/: drive_train.cpp
src/fsae_electric_vehicle/src/cpp/drivetrain/: drive_train.cpp
src/fsae_electric_vehicle/src/cpp/gps/: main.cpp
src/fsae_electric_vehicle/src/cpp/socketsender/: main.cpp
src/fsae_electric_vehicle/src/cpp/speedometer/: main.cpp
src/fsae_electric_vehicle/src/cpp/steering/: main.cpp
src/fsae_electric_vehicle/src/cpp/suspension/: main.cpp
src/fsae_electric_vehicle/src/js/: package-lock.json  package.json  reader.js
src/fsae_electric_vehicle/src/launch/: main.launch
src/fsae_electric_vehicle/src/python/gps/: gps.py
src/fsae_electric_vehicle/src/python/serial/: serial.py
(+286 files in other folders)
